Source/WebCore/platform/cocoa/MediaUtilities.cpp
@@ -39,7 +39,7 @@ RetainPtr<CMFormatDescriptionRef> createAudioFormatDescription(const AudioStream
     CMFormatDescriptionRef format = nullptr;
     auto error = PAL::CMAudioFormatDescriptionCreate(kCFAllocatorDefault, basicDescription, 0, nullptr, magicCookieSize, magicCookie, nullptr, &format);
     if (error) {
-        LOG_ERROR("createAudioFormatDescription failed with %d", error);
+        LOG_ERROR("createAudioFormatDescription failed with %d", static_cast<int>(error));
         return nullptr;
     }
     return adoptCF(format);
@@ -55,14 +55,14 @@ RetainPtr<CMSampleBufferRef> createAudioSampleBuffer(const PlatformAudioData& da
     CMSampleBufferRef sampleBuffer = nullptr;
     auto error = PAL::CMAudioSampleBufferCreateWithPacketDescriptions(kCFAllocatorDefault, nullptr, false, nullptr, nullptr, format.get(), sampleCount, time, nullptr, &sampleBuffer);
     if (error) {
-        LOG_ERROR("createAudioSampleBuffer with packet descriptions failed - %d", error);
+        LOG_ERROR("createAudioSampleBuffer with packet descriptions failed - %d", static_cast<int>(error));
         return nullptr;
     }
     auto buffer = adoptCF(sampleBuffer);
 
     error = PAL::CMSampleBufferSetDataBufferFromAudioBufferList(buffer.get(), kCFAllocatorDefault, kCFAllocatorDefault, 0, downcast<WebAudioBufferList>(data).list());
     if (error) {
-        LOG_ERROR("createAudioSampleBuffer from audio buffer list failed - %d", error);
+        LOG_ERROR("createAudioSampleBuffer from audio buffer list failed - %d", static_cast<int>(error));
         return nullptr;
     }
     return buffer;
